HanZiZhuangYuan_Commit_tlf_2019_10_04

--- a/UnityVS.HanZiHeDan.CSharp.csproj
+++ b/UnityVS.HanZiHeDan.CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\Script\AddRipper.cs" />
     <Compile Include="Assets\Script\BoxColliderAdjust.cs" />
+    <Compile Include="Assets\Script\ChuiZiElement.cs" />
     <Compile Include="Assets\Script\ElementsNumArr.cs" />
     <Compile Include="Assets\Script\HanZiElement.cs" />
     <Compile Include="Assets\Script\HanZiElementStruct.cs" />
