--- a/UnityVS.HanZiHeDan.CSharp.csproj
+++ b/UnityVS.HanZiHeDan.CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Script\HanZiElementStruct.cs" />
     <Compile Include="Assets\Script\HanZiHeDan.cs" />
     <Compile Include="Assets\Script\HanZiKuang.cs" />
+    <Compile Include="Assets\Script\LiZhiXiaoGuo.cs" />
     <Compile Include="Assets\Script\PostEffectBase.cs" />
     <Compile Include="Assets\Script\RipperPostEffect.cs" />
     <Compile Include="Assets\Script\ShuiWen.cs" />
